--- a/gravitee-apim-console-webui/src/management/_stepper.scss
+++ b/gravitee-apim-console-webui/src/management/_stepper.scss
@@ -39,7 +39,7 @@ md-steppers-canvas.md-paginated {
 .gv-creation-steppers {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
   background: #fff;
-  margin: 20px 20px 20px 20px;
+  margin: 20px 20px 0 0;
 }
 
 .import-file-drop-box {
