--- a/gravitee-apim-console-webui/src/management/api/portal/plans/list/api-portal-plan-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/list/api-portal-plan-list.component.scss
@@ -12,7 +12,7 @@ $foreground: map.get(gio.$mat-theme, foreground);
 .plans {
   &__header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
   }
 
