--- a/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.scss
+++ b/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.scss
@@ -17,14 +17,26 @@
 @use 'node_modules/@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
-.application-navigation {
+$textColor: map.get(gio.$mat-dove-palette, default);
+
+:host {
   height: 100%;
+}
+
+.application-navigation {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
 
   &__menu {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__submenu {
     z-index: 70;
-    flex: 1 1 auto;
+    height: 100%;
+    color: $textColor;
 
     &__title {
       width: 100%;
@@ -32,5 +44,20 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+  }
+
+  &__breadcrumb {
+    padding: 24px 32px 0 32px;
+
+    &__item {
+      display: contents;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    height: 100%;
   }
 }
