--- a/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.scss
+++ b/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.scss
@@ -14,14 +14,43 @@
  * limitations under the License.
  */
 @use 'sass:map';
+@use 'node_modules/@angular/material' as mat;
+@use '@gravitee/ui-particles-angular' as gio;
+
+$textColor: map.get(gio.$mat-dove-palette, default);
+
+:host {
+  height: 100%;
+}
 
 .settings-navigation {
-  height: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+
+  &__menu {
+    display: flex;
+    flex-direction: column;
+  }
 
   &__submenu {
     z-index: 70;
+    height: 100%;
+    color: $textColor;
+  }
+
+  &__breadcrumb {
+    padding: 24px 32px 0 32px;
+
+    &__item {
+      display: contents;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
     flex: 1 1 auto;
+    height: 100%;
   }
 }
