--- a/gravitee-apim-console-webui/src/management/api/proxy/health-check/api-proxy-health-check.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/health-check/api-proxy-health-check.component.html
@@ -1,13 +1,13 @@
 <!--
 
     Copyright (C) 2015 The Gravitee team (http://gravitee.io)
-    
+
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
-    
+
             http://www.apache.org/licenses/LICENSE-2.0
-    
+
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,17 +15,15 @@
     limitations under the License.
 
 -->
-<h1>
-  Health-check
-  <button class="api-proxy-health-check__go-to-dashboard" mat-raised-button type="button" (click)="gotToHealthCheckDashboard()">
+<div class="api-proxy-health-check__header">
+  <p class="api-proxy-health-check__header__description">
+    Health check configuration let you enable or disable health check service, set a frequency rate, choose an health relative path and
+    provide some assertions to control endpoint API's health.
+  </p>
+  <button class="api-proxy-health-check__header__go-to-dashboard" mat-raised-button type="button" (click)="gotToHealthCheckDashboard()">
     Go to Health-check dashboard
   </button>
-</h1>
-
-<p class="api-proxy-health-check__description">
-  Health check configuration let you enable or disable health check service, set a frequency rate, choose an health relative path and
-  provide some assertions to control endpoint API's health.
-</p>
+</div>
 
 <gio-banner-info class="api-proxy-health-check__banner-info">
   <span> By enabling health-check, all non-backup endpoints will be checked except if health-check is disabled at endpoint level. </span>
