--- a/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.html
@@ -16,12 +16,29 @@
 
 -->
 <div class="application-navigation">
-  <gio-submenu class="application-navigation__menu">
-    <div gioSubmenuTitle class="application-navigation__menu__title">{{ this.applicationName }}</div>
-    <ng-container *ngFor="let item of this.subMenuItems">
-      <gio-submenu-item *ngIf="item.targetRoute" tabIndex="1" (click)="navigateTo(item.targetRoute)" [active]="isActive(item.baseRoute)">{{
-        item.displayName
-      }}</gio-submenu-item>
-    </ng-container>
-  </gio-submenu>
+  <div class="application-navigation__menu">
+    <gio-submenu class="application-navigation__submenu">
+      <div gioSubmenuTitle class="application-navigation__submenu__title">{{ this.applicationName }}</div>
+      <ng-container *ngFor="let item of this.subMenuItems">
+        <gio-submenu-item
+          *ngIf="item.targetRoute"
+          tabIndex="1"
+          (click)="navigateTo(item.targetRoute)"
+          [active]="isActive(item.baseRoute)"
+          >{{ item.displayName }}</gio-submenu-item
+        >
+      </ng-container>
+    </gio-submenu>
+  </div>
+  <div class="application-navigation__content">
+    <gio-breadcrumb *ngIf="hasBreadcrumb" class="application-navigation__breadcrumb">
+      <span *gioBreadcrumbItem class="application-navigation__breadcrumb__item">Applications</span>
+      <div *gioBreadcrumbItem gioSubmenuTitle class="application-navigation__menu__title">{{ this.applicationName }}</div>
+      <ng-template ngFor let-item [ngForOf]="this.computeBreadcrumbItems()">
+        <span *gioBreadcrumbItem class="application-navigation__breadcrumb__item">{{ item }}</span>
+      </ng-template>
+    </gio-breadcrumb>
+
+    <ng-content></ng-content>
+  </div>
 </div>
