--- a/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.html
@@ -16,17 +16,29 @@
 
 -->
 <div class="settings-navigation">
-  <gio-submenu class="settings-navigation__submenu">
-    <ng-container *ngFor="let group of this.groupItems">
-      <gio-submenu-group [title]="group.title" *ngIf="group.items && group.items.length > 0">
-        <gio-submenu-item
-          *ngFor="let item of group.items"
-          tabIndex="1"
-          (click)="navigateTo(item.targetRoute)"
-          [active]="isActive(item.baseRoute)"
-          >{{ item.displayName }}</gio-submenu-item
-        >
-      </gio-submenu-group>
-    </ng-container>
-  </gio-submenu>
+  <div class="settings-navigation__menu">
+    <gio-submenu class="settings-navigation__submenu">
+      <ng-container *ngFor="let group of this.groupItems">
+        <gio-submenu-group [title]="group.title" *ngIf="group.items && group.items.length > 0">
+          <gio-submenu-item
+            *ngFor="let item of group.items"
+            tabIndex="1"
+            (click)="navigateTo(item.targetRoute)"
+            [active]="isActive(item.baseRoute)"
+            >{{ item.displayName }}</gio-submenu-item
+          >
+        </gio-submenu-group>
+      </ng-container>
+    </gio-submenu>
+  </div>
+  <div class="settings-navigation__content">
+    <gio-breadcrumb *ngIf="hasBreadcrumb" class="settings-navigation__breadcrumb">
+      <span *gioBreadcrumbItem class="settings-navigation__breadcrumb__item">Settings</span>
+      <ng-template ngFor let-item [ngForOf]="this.computeBreadcrumbItems()">
+        <span *gioBreadcrumbItem class="settings-navigation__breadcrumb__item">{{ item }}</span>
+      </ng-template>
+    </gio-breadcrumb>
+
+    <ng-content></ng-content>
+  </div>
 </div>
