--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/api-portal-plan-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/api-portal-plan-edit.component.html
@@ -20,7 +20,7 @@
   <gio-go-back-button [ajsGo]="{ to: 'management.apis.detail.portal.plans' }"></gio-go-back-button>
   Plan
 </h1>
-<form *ngIf="planForm" autocomplete="off" gioFormFocusInvalid [formGroup]="planForm">
+<form *ngIf="planForm" [hidden]="isLoadingData" autocomplete="off" gioFormFocusInvalid [formGroup]="planForm">
   <mat-card>
     <mat-stepper>
       <mat-step state="general" [stepControl]="planForm.get('general')">
