feat(console): add readonly mode for k8s origin
and some minor improvement on page loading

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/edit/api-portal-plan-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/edit/api-portal-plan-edit.component.html
@@ -55,7 +55,7 @@
   </mat-card>
 
   <gio-save-bar
-    *ngIf="planForm"
+    *ngIf="planForm && !isReadOnly"
     [creationMode]="mode === 'create'"
     [form]="planForm"
     [formInitialValues]="initialPlanFormValue"
