feat: select event native entrypoints for api creation

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/api-creation-v4-step-1.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/api-creation-v4-step-1.component.html
@@ -15,9 +15,9 @@
     limitations under the License.
 
 -->
-<mat-card class="api-creation-v4-step-1">
-  <div class="api-creation-v4-step-1__header">
-    <div class="api-creation-v4-step-1__step-number mat-h4">Step 1</div>
+<mat-card class="api-creation-v4__step">
+  <div class="api-creation-v4__step__header">
+    <div class="api-creation-v4__step__step-number mat-h4">Step 1</div>
     <div class="mat-h2 subtitle">Provide some metadata on your API</div>
   </div>
   <div class="mat-h3">API Details</div>
