--- a/gravitee-apim-console-webui/src/management/api/analytics/pathMappings/api-path-mappings.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/analytics/pathMappings/api-path-mappings.component.scss
@@ -1,6 +1,6 @@
 @use 'sass:map';
 @use '../../../../scss/gio-layout' as gio-layout;
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 
 :host {
   @include gio-layout.gio-responsive-content-container;
