--- a/gravitee-apim-console-webui/src/management/api/policy-studio/debug/components/policy-studio-debug-timeline-card/policy-studio-debug-timeline-card.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/policy-studio/debug/components/policy-studio-debug-timeline-card/policy-studio-debug-timeline-card.component.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
 $typography: map.get(gio.$mat-theme, typography);
