--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/configuration/api-proxy-group-configuration.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/configuration/api-proxy-group-configuration.component.scss
@@ -1,3 +1,3 @@
 @use 'sass:map';
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
