--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
@@ -1,6 +1,6 @@
 @use 'sass:map';
 @use '../../../../../scss/gio-layout' as gio-layout;
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
 $foreground: map.get(gio.$mat-theme, foreground);
