--- a/gravitee-apim-console-webui/src/organization/configuration/roles/org-settings-roles.component.scss
+++ b/gravitee-apim-console-webui/src/organization/configuration/roles/org-settings-roles.component.scss
@@ -1,7 +1,7 @@
 @use '../../../scss/gio-layout' as gio-layout;
 
 @use 'sass:map';
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
 $background: map-get(gio.$mat-theme, background);
