--- a/gravitee-apim-console-webui/src/organization/configuration/user/detail/org-settings-user-detail-add-group-dialog.component.scss
+++ b/gravitee-apim-console-webui/src/organization/configuration/user/detail/org-settings-user-detail-add-group-dialog.component.scss
@@ -1,4 +1,4 @@
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
 .form {
