--- a/gravitee-apim-console-webui/src/shared/components/gio-api-import-dialog/gio-api-import-dialog.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-api-import-dialog/gio-api-import-dialog.component.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
 $typography: map.get(gio.$mat-theme, typography);
