--- a/gravitee-apim-console-webui/src/shared/components/gio-form-card-group/gio-form-card.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-form-card-group/gio-form-card.component.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 @use 'sass:map';
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
 $foreground: map.get(gio.$mat-theme, foreground);
