--- a/gravitee-apim-console-webui/src/shared/components/gio-form-color-input/gio-form-color-input.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-form-color-input/gio-form-color-input.component.scss
@@ -15,7 +15,7 @@
  */
 
 @use 'sass:map';
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
 $background: map.get(gio.$mat-theme, background);
