--- a/gravitee-apim-console-webui/src/shared/components/gio-users-selector/gio-users-selector.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-users-selector/gio-users-selector.component.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use 'node_modules/@angular/material' as mat;
+@use '@angular/material' as mat;
 @use 'node_modules/@gravitee/ui-particles-angular' as gio;
 
 $background: map.get(gio.$mat-theme, background);
