--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-wip/api-creation-v4-step-wip.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-wip/api-creation-v4-step-wip.component.html
@@ -15,15 +15,17 @@
     limitations under the License.
 
 -->
-<mat-card class="api-creation-stepper">
-  <div class="api-creation-stepper__header">
-    <div class="api-creation-stepper__title mat-h3">API creation</div>
-    <div class="api-creation-stepper__subtitle">Follow these steps to get your API</div>
+<mat-card class="api-creation-v4__step">
+  <div class="api-creation-v4__step__header">
+    <div class="api-creation-v4__step__step-number mat-h4">Step 🚧</div>
+    <div class="mat-h2 subtitle">🚧</div>
   </div>
-
-  <div class="steps">
-    <api-creation-step *ngFor="let step of steps" [stepNumber]="step.number" [currentStep]="currentStep.number">{{
-      step.label
-    }}</api-creation-step>
-  </div>
+  <div class="mat-h3">API Details</div>
+  <form [formGroup]="form" (ngSubmit)="save()">
+    🚧🚧🚧🚧
+    <div class="api-creation-v4-step-1__footer">
+      <button id="previous" mat-stroked-button type="button" (click)="goBack()">Previous</button>
+      <button id="validate" mat-flat-button color="primary" type="submit" [disabled]="form.invalid">Validate my 🚧</button>
+    </div>
+  </form>
 </mat-card>
