--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-wip/api-creation-v4-step-wip.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-wip/api-creation-v4-step-wip.component.html
@@ -17,13 +17,14 @@
 -->
 <mat-card class="api-creation-v4__step">
   <div class="api-creation-v4__step__header">
-    <div class="api-creation-v4__step__step-number mat-h4">Step 🚧</div>
-    <div class="mat-h2 subtitle">🚧</div>
+    <div class="api-creation-v4__step__header__step-number">Step 🚧</div>
+    <div class="api-creation-v4__step__header__subtitle">🚧</div>
+    <p class="api-creation-v4__step__header__paragraph-light">🚧</p>
   </div>
   <div class="mat-h3">API Details</div>
   <form [formGroup]="form" (ngSubmit)="save()">
     🚧🚧🚧🚧
-    <div class="api-creation-v4-step-1__footer">
+    <div class="api-creation-v4__step__footer">
       <button id="previous" mat-stroked-button type="button" (click)="goBack()">Previous</button>
       <button id="validate" mat-flat-button color="primary" type="submit" [disabled]="form.invalid">Validate my 🚧</button>
     </div>
