--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2/api-creation-v4-step-2.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2/api-creation-v4-step-2.component.html
@@ -35,7 +35,7 @@
           <gio-selection-list-option-layout-title>
             {{ entrypoint.name }}
             <span class="gio-badge-primary strong-badge">New</span>
-            <span class="gio-badge-accent strong-badge">Enterprise</span>
+            <span class="gio-badge-accent strong-badge" *ngIf="entrypoint.isEnterprise">Enterprise</span>
           </gio-selection-list-option-layout-title>
 
           <gio-selection-list-option-layout-body>
