refactor(console): improve stepper service
- Add dedicated service for step ApiCreationStepService
- Change payload to have patch function

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper/api-creation-stepper.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper/api-creation-stepper.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="steps">
-    <api-creation-step *ngFor="let step of steps" [stepNumber]="step.number" [currentStep]="currentStep.number">{{
+    <api-creation-step *ngFor="let step of steps" [stepNumber]="step.position" [currentStep]="currentStep.position">{{
       step.label
     }}</api-creation-step>
   </div>
